--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/analysis.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/analysis.html
@@ -7,7 +7,7 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- 	<link rel="stylesheet" type="text/css" href="css/style.css">
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js"></script>
 </head>
 <body>
   	<div class="container">
@@ -41,15 +41,35 @@
 			  <!-- Wrapper for slides -->
 			 	<div class="carousel-inner" role="listbox">
 				    <div class="item active">
-				      	<img src="img/cat1.jpeg" alt="Chania">
+				      	<script type="text/javascript">
+							var myData = new Array(['Jan', 2], ['Feb', 1], ['Mar', 3], ['Apr', 6], ['May', 8], ['Jun', 10], ['Jul', 9], ['Aug', 8], ['Sep', 5], ['Oct', 6], ['Nov', 2], ['Dec', 4]);
+							var colors = ['#FFCC00', '#FFFF00', '#CCFF00', '#99FF00', '#33FF00', '#00FF66', '#00FF99', '#00FFCC', '#FF0000', '#FF3300', '#FF6600', '#FF9900'];
+							var myChart = new JSChart('chartid', 'pie');
+								myChart.setDataArray(myData);
+									myChart.colorizePie(colors);
+									myChart.setPiePosition(308, 170);
+									myChart.setPieRadius(95);
+									myChart.setPieUnitsFontSize(8);
+									myChart.setPieUnitsColor('#474747');
+									myChart.setPieValuesColor('#474747');
+									myChart.setPieValuesOffset(-10);
+									myChart.setTitleColor('#fff');
+									myChart.setSize(616, 321);
+									myChart.setBackgroundImage('path/background.jpg');
+								myChart.draw();
+				      	</script>
 				    </div>
 
 				    <div class="item">
-				      	<img src="img/cat2.jpg" alt="Chania">
+				      	<img src="http://www.aspca.org/sites/default/files/cat-care_urine-marking_main-image.jpg" alt="Chania">
 				    </div>
 
 				    <div class="item">
-				      	<img src="img/cat3.jpg" alt="Flower">
+				      	<img src="http://www.jeremynoeljohnson.com/wp-content/uploads/2014/06/crazy_cat_4.jpg" alt="Flower">
+				    </div>
+
+				     <div class="item">
+				      	<img src="https://pbs.twimg.com/media/Cf8-vKXVAAA5qRR.jpg" alt="Flower">
 				    </div>
 			  	</div>
 
